<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/appBackground"
    tools:context="com.example.codetribe.dineinstyle.SignUp">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_user"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>



    <EditText
        android:id="@+id/provide_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress|textAutoCorrect"
        android:maxLines="1" />


    <EditText
        android:id="@+id/provide_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:password="false" />


    <Button
        android:id="@+id/create_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

</LinearLayout>
