<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/appBackground"
    tools:context="com.example.codetribe.dineinstyle.SetUpProfile">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_profile_text"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:textSize="32sp"
        android:textAlignment="center" />



    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/com_facebook_profile_picture_blank_square"
        android:id="@+id/set_pro_pic"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click to upload picture"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/provide_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:maxLines="1" />


    <EditText
        android:id="@+id/provide_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_surname"
        android:inputType="textPersonName"
        android:maxLines="1" />


    <Button
        android:id="@+id/finish_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_setup"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_marginTop="26dp"
        android:background="@color/buttons_background"/>

</LinearLayout>
