<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/appBackground"

    tools:context="com.example.codetribe.dineinstyle.WelcomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/res"
            android:id="@+id/circleView"
            android:layout_marginTop="30dp"
            android:layout_gravity="center">

        </de.hdodenhof.circleimageview.CircleImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/sign_up_button_one"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:background="@color/buttons_background"/>

    <Button
        android:id="@+id/sign_in_button_one"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_sign_in"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:background="@color/buttons_background"/>



</LinearLayout>
