<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/appBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.codetribe.dineinstyle.LoginActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Or sign in with your account"
        android:textAppearance="?android:textAppearanceLarge"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:background="@color/tan_background"
                android:layout_gravity="center_horizontal">


                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/tan_background"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:background="@color/tan_background"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:password="false"
                    android:background="@color/tan_background"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@color/buttons_background"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
